Working on qt and mamba build

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -25,27 +25,28 @@ set(CMAKE_CXX_COMPILER_NAMES clang++ g++ icpc c++ cxx FCC CC)
 
 # do not scan anaconda directories
 set(CMAKE_IGNORE_PREFIX_PATH "$ENV{HOME}/anaconda3;$ENV{HOME}/anaconda2")
-message("CMAKE_IGNORE_PREFIX_PATH: ${CMAKE_IGNORE_PREFIX_PATH}")
-
-message("CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}") 
-message("CONDA_PREFIX: ${CONDA_PREFIX}") 
-message("CMAKE_FIND_ROOT_PATH: ${CMAKE_FIND_ROOT_PATH}") 
-message("CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}") 
-message("CONDA_BUILD: ${CONDA_BUILD}") 
-message("CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}") 
-message("CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}") 
-message("CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}") 
-message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}") 
-message("CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}") 
-message("PKG_CONFIG_PATH: ${PKG_CONFIG_PATH}") 
-message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}") 
-message("CMAKE_LIBRARIES: ${CMAKE_LIBRARIES}") 
-message("CMAKE_INCLUDE_PATH: ${CMAKE_INCLUDE_PATH}") 
-message("CONDA_BUILD_SYSROOT: ${CONDA_BUILD_SYSROOT}") 
-message("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}") 
-message("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}") 
-message("QT_ADDITIONAL_PACKAGES_PREFIX_PATH: ${QT_ADDITIONAL_PACKAGES_PREFIX_PATH}") 
-message("2222222222222 Qt6_FOUND: ${Qt6_FOUND}") 
+# print some variables for debugging
+message("========>> Variables for debugging <<========")
+message("====>> CMAKE_IGNORE_PREFIX_PATH: ${CMAKE_IGNORE_PREFIX_PATH}")
+message("====>> CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
+message("====>> CONDA_PREFIX: ${CONDA_PREFIX}")
+message("====>> CMAKE_FIND_ROOT_PATH: ${CMAKE_FIND_ROOT_PATH}")
+message("====>> CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+message("====>> CONDA_BUILD: ${CONDA_BUILD}")
+message("====>> CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
+message("====>> CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
+message("====>> CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+message("====>> CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
+message("====>> CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
+message("====>> PKG_CONFIG_PATH: ${PKG_CONFIG_PATH}")
+message("====>> CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
+message("====>> CMAKE_LIBRARIES: ${CMAKE_LIBRARIES}")
+message("====>> CMAKE_INCLUDE_PATH: ${CMAKE_INCLUDE_PATH}")
+message("====>> CONDA_BUILD_SYSROOT: ${CONDA_BUILD_SYSROOT}")
+message("====>> CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
+message("====>> CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
+message("====>> QT_ADDITIONAL_PACKAGES_PREFIX_PATH: ${QT_ADDITIONAL_PACKAGES_PREFIX_PATH}")
+message("=============================================")
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
@@ -61,6 +62,7 @@ set(PACKAGE "LROSE-CORE" CACHE STRING "")
 # Finding pkg-config
 find_package(PkgConfig REQUIRED)
 
+# miniforge3 conda-forge build
 set(MINIFORGE_ROOT "$ENV{HOME}/miniforge3")
 if (DEFINED MINIFORGE_DIR)
   set(MINIFORGE_ROOT "${MINIFORGE_DIR}")
@@ -70,16 +72,19 @@ if (DEFINED MAMBA_BUILD)
 # MAMBA builds ignore system includes and libs, use mamba dirs
   set(MAMBA_INCLUDE_PATH ${MINIFORGE_ROOT}/include)
   set(MAMBA_LIBRARY_PATH ${MINIFORGE_ROOT}/lib)
-  set(QT_HOST_PATH ${MINIFORGE_ROOT}) 
-  set(CMAKE_SYSTEM_IGNORE_PREFIX_PATH "/usr;/usr/local;/usr/lib64;/lib;/lib64;/opt/homebrew") 
+  set(QT_HOST_PATH ${MINIFORGE_ROOT})
+  set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)
+  set(CMAKE_SYSTEM_IGNORE_PREFIX_PATH "/usr;/usr/local;/usr/lib64;/lib;/lib64;/opt/homebrew")
+# On APPLE OSX, for QT we need to find OpenGL provided by the system SDK
   if (APPLE)
     set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH TRUE)
-    message("4444444444444 set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH TRUE)") 
+    message("======>> set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH TRUE)")
   else()
-    message("55555555555555555 set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)") 
-    set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE) 
+    message("======>> set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)")
+    set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)
   endif()
 endif(DEFINED MAMBA_BUILD)
+
 
 find_package (X11)
 if (DEFINED X11_X11_LIB)
@@ -87,10 +92,9 @@ if (DEFINED X11_X11_LIB)
 endif()
 
 # Finding Qt
-
 find_package (Qt6 COMPONENTS Core QUIET)
 if (NOT Qt6_FOUND)
-  find_package (Qt5 COMPONENTS Core QUIET)
+  find_package (Qt5 COMPONENTS Core REQUIRED)
 endif()
 if (Qt5_FOUND)
   message(STATUS "Found Qt5: ${Qt5_VERSION}")
@@ -99,9 +103,6 @@ elseif (Qt6_FOUND)
 else ()
   message(FATAL_ERROR, "Qt not found.")
 endif(Qt5_FOUND)
-
-message("333333333333 Qt6_FOUND: ${Qt6_FOUND}") 
-
 if(APPLE)
   if (DEFINED MAMBA_BUILD)
 # MAMBA builds ignore system libs, use mamba libs
@@ -110,7 +111,7 @@ if(APPLE)
     elseif (Qt6_FOUND)
       find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
     endif(Qt5_FOUND)
-  else ()
+  else()
     if (Qt5_FOUND)
       find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
     elseif (Qt6_FOUND)
@@ -118,9 +119,10 @@ if(APPLE)
     endif(Qt5_FOUND)
   endif(DEFINED MAMBA_BUILD)
 endif(APPLE)
-
-message("aaaaaaaaaaaaaaaaaaaaaaaaaaa") 
-
+set (CMAKE_INCLUDE_CURRENT_DIR ON)
+set (CMAKE_AUTOMOC ON)
+set (CMAKE_AUTORCC ON)
+set (CMAKE_AUTOUIC ON)
 if (Qt5_FOUND)
 #QT5
   if (DEFINED MAMBA_BUILD)
@@ -148,11 +150,10 @@ else()
 endif(Qt5_FOUND)
 
 if (DEFINED MAMBA_BUILD)
-  set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE) 
-  message("666666666666666666666666 set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)") 
- endif(DEFINED MAMBA_BUILD)
-
- find_package (HDF5)
+set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)
+message("======>> set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)")
+endif(DEFINED MAMBA_BUILD)
+find_package (HDF5)
 
 # find_package (NETCDF)
 # find_package (LROSE)
@@ -230,11 +231,6 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   set(CMAKE_EXE_LINKER_FLAGS "-Wl,--enable-new-dtags")
 endif()
 
-  message("77777777777777777777777777777") 
-
 add_subdirectory(libs)
-
-  message("8888888888888888888888888888888") 
-
 add_subdirectory(apps)
 
