codebase/apps/ingest/src/_makefiles/makefile.lrose-core, codebase/apps/radar/src/_makefiles/makefile.lrose-core - adding new apps

--- a/codebase/apps/ingest/src/_makefiles/makefile.lrose-core
+++ b/codebase/apps/ingest/src/_makefiles/makefile.lrose-core
@@ -35,7 +35,9 @@ SUB_DIRS = \
 	LdmDynamic2Static \
 	LdmMetars2File \
 	Ltg2Spdb \
+	Mesonet2Spdb \
 	Metar2Spdb \
+	MetarCsv2Spdb \
 	Mrms2Mdv \
 	MrmsGribIngest \
 	NWSsoundingIngest \
@@ -56,6 +58,7 @@ SUB_DIRS = \
 	ShipObsIngest \
 	SigAirMet2Spdb \
 	SynopObsIngest \
+	UAEMesonet2Spdb \
 	Uf2Dsr \
 	Usgs2Spdb \
 	WafsTiled2Mdv \
