--- a/codebase/apps/Radx/src/CMakeLists.txt
+++ b/codebase/apps/Radx/src/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory (FixFieldVals)
 add_subdirectory (FixRadxPointing)
 add_subdirectory (FixRadxValues)
 add_subdirectory (Radx2Dsr)
+add_subdirectory (Radx2Fmq)
 add_subdirectory (Radx2Grid)
 add_subdirectory (RadxBeamBlock)
 add_subdirectory (RadxBufr)
